attached_assets/Pasted-env-load-env-production-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SE-1754668298429_1754668298429.txt
env: load .env.production .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_API_URL EXPO_PUBLIC_VPS_URL EXPO_PUBLIC_APP_STORE_URL EXPO_PUBLIC_SUPPORT_EMAIL EXPO_PUBLIC_CLARIFAI_API_KEY EXPO_PUBLIC_GOOGLE_VISION_API_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓░░░░░░░░░░ 42.8% (411/628)
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 82.2% (1214/1339)
iOS Bundling failed 6345ms node_modules/expo-router/entry.js (1567 modules)
SyntaxError: /Users/expo/workingdir/build/app/(client)/profil.tsx: Unexpected token, expected "," (315:14)

[0m [90m 313 |[39m           setTimeout([36masync[39m () [33m=>[39m {
 [90m 314 |[39m             [36mawait[39m loadIntegrationStatus()[33m;[39m
[31m[1m>[22m[39m[90m 315 |[39m             } [36melse[39m {
 [90m     |[39m               [31m[1m^[22m[39m
 [90m 316 |[39m         console[33m.[39mlog([32m'❌ Connexion Strava échouée'[39m)[33m;[39m
 [90m 317 |[39m         hideModal()[33m;[39m
 [90m 318 |[39m[0m
SyntaxError: SyntaxError: /Users/expo/workingdir/build/app/(client)/profil.tsx: Unexpected token, expected "," (315:14)

[0m [90m 313 |[39m           setTimeout([36masync[39m () [33m=>[39m {
 [90m 314 |[39m             [36mawait[39m loadIntegrationStatus()[33m;[39m
[31m[1m>[22m[39m[90m 315 |[39m             } [36melse[39m {
 [90m     |[39m               [31m[1m^[22m[39m
 [90m 316 |[39m         console[33m.[39mlog([32m'❌ Connexion Strava échouée'[39m)[33m;[39m
 [90m 317 |[39m         hideModal()[33m;[39m
 [90m 318 |[39m[0m
SyntaxError: /Users/expo/workingdir/build/app/(client)/profil.tsx: Unexpected token, expected "," (315:14)

[0m [90m 313 |[39m           setTimeout([36masync[39m () [33m=>[39m {
 [90m 314 |[39m             [36mawait[39m loadIntegrationStatus()[33m;[39m
[31m[1m>[22m[39m[90m 315 |[39m             } [36melse[39m {
 [90m     |[39m               [31m[1m^[22m[39m
 [90m 316 |[39m         console[33m.[39mlog([32m'❌ Connexion Strava échouée'[39m)[33m;[39m
 [90m 317 |[39m         hideModal()[33m;[39m
 [90m 318 |[39m[0m
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at TypeScriptParserMixin.unexpected (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6647:16)
    at TypeScriptParserMixin.expect (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6927:12)
    at TypeScriptParserMixin.parseCallExpressionArguments (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11238:14)
    at TypeScriptParserMixin.parseCoverCallAndAsyncArrowHead (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11181:29)
    at TypeScriptParserMixin.parseSubscript (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11115:19)
    at TypeScriptParserMixin.parseSubscript (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9353:18)
    at TypeScriptParserMixin.parseSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11089:19)
    at TypeScriptParserMixin.parseExprSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11080:17)
    at TypeScriptParserMixin.parseUpdate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9801:20)
    at TypeScriptParserMixin.parseExpressionBase (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10779:23)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10775:39
    at TypeScriptParserMixin.allowInAnd (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12422:16)
    at TypeScriptParserMixin.parseExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10775:17)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12895:23)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12858:21)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementOrSloppyAnnexBFunctionDeclaration (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12757:17)
    at TypeScriptParserMixin.parseIfStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13131:42)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12796:21)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12858:21)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementOrSloppyAnnexBFunctionDeclaration (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12757:17)
    at TypeScriptParserMixin.parseIfStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13130:28)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12796:21)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12747:17)
